--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "import/prefer-default-export": 0,
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0,
+    "react/state-in-constructor": 0,
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
     "react/jsx-filename-extension": [
